--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "pack": "electron-builder --dir",
-    "dist": "electron-builder --windows"
+    "build": "electron-builder --windows --x64",
+    "identity" : "null"
   },
   "repository": "",
   "keywords": [
@@ -16,7 +16,7 @@
   "license": "MIT",
   "devDependencies": {
     "electron": "^11.0.4",
-    "electron-builder": "^22.9.1"
+    "electron-packager": "^15.2.0"
   },
   "dependencies": {
     "jquery": "^3.5.1"
